# zerogpt

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
data/: gpt-demo-checkpoint.json  ua-settlement-names.txt
src/zerogpt/: __init__.py  autograd.py  cli.py  model.py  ops.py  optimize.py  runner.py  serialization.py  tokenizer.py
tests/: helpers.py  test_autograd.py  test_cli.py  test_model.py  test_ops.py  test_optimize.py  test_runner.py  test_serialization.py  test_tokenizer.py
