[project]
name = "zerogpt"
version = "0.1.0"
description = "An educational, zero-dependency training/inference pipeline for a GPT-like LLM"
readme = "README.md"
authors = [
    { name = "Yuriy Guts", email = "yuriy.guts@gmail.com" }
]
license = "BSD-3-Clause"
requires-python = ">=3.12"
keywords = ["llm", "gpt"]
dependencies = []

[project.urls]
repository = "https://github.com/YuriyGuts/zerogpt"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.14",
    "ty>=0.0.39",
]

[project.scripts]
zerogpt = "zerogpt.cli:main"

[build-system]
requires = ["uv_build>=0.10.6,<0.11.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint]
select = [
    "ANN",      # flake8-annotations
    "B",        # flake8-bugbear
    "C4",       # flake8-comprehensions
    "D",        # pydocstyle
    "E",        # pycodestyle
    "F",        # pyflakes
    "I",        # isort
    "INP",      # check missing __init__.py
    "N",        # pep8-naming
    "PL",       # pylint
    "PT",       # flake8-pytest-style
    "PYI",      # flake8-pyi
    "SIM",      # flake8-simplify
    "UP",       # pyupgrade
    "W",        # pycodestyle warnings
]
ignore = [
    "D105",     # magic methods are self-explanatory and documented inline
    "PLR0913",  # too many arguments
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ANN",      # tests: no type annotations required
    "D",        # tests: no docstrings required
    "PLR2004",  # tests: magic numbers are fine
]

[tool.ty.src]
exclude = ["tests/"]
